--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.20MB/s(Youtube:不良林), server: 85.208.108.94, port: 9101, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇯🇵 日本-3.17MB/s(Youtube:不良林), server: 85.208.108.94, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-3.19MB/s(Youtube:不良林), server: 85.208.108.94, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-1.64MB/s(Youtube:不良林), server: 85.208.108.94, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇫🇷 法国-1.45MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 未知国家-455.8KB/s(Youtube:不良林), server: cu--0555.26114755-5ffa-4204-b927-93b4c76e6dff.ariel-tel.co.in.cdn.cloudflare.net, port: 51625, type: ss, cipher: aes-256-gcm, password: 6d0477b8-d0d9-37f0-85c3-a887a0a8eb19}
-  - {name: 🇷🇺 俄罗斯联邦-222.1KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-3.50MB/s(Youtube:不良林), server: 85.208.108.94, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.43MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-3.58MB/s(Youtube:不良林), server: 85.208.108.94, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.89MB/s(Youtube:不良林), server: 85.208.108.94, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-2.36MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇯🇵 日本-2.80MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇳 中国-7.24MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-307.2KB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 未知国家-455.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-222.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 未知国家-455.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-222.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 未知国家-455.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-222.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 未知国家-455.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-222.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 未知国家-455.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-222.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 未知国家-455.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-222.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.19MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.45MB/s(Youtube:不良林)
-      - 未知国家-455.8KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-222.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.43MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.58MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.36MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.80MB/s(Youtube:不良林)
       - 🇨🇳 中国-7.24MB/s(Youtube:不良林)
+      - 🇺🇸 美国-307.2KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
