--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.21MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-177.2KB/s(Youtube:不良林), server: 85.208.108.94, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇫🇷 法国-2.32MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇯🇵 日本-3.50MB/s(Youtube:不良林), server: 85.208.108.94, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇯🇵 日本-2.89MB/s(Youtube:不良林), server: 85.208.108.94, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-988.0KB/s(Youtube:不良林), server: 95.169.4.174, port: 254, type: ss, cipher: aes-256-cfb, password: bwhskrskr06}
+  - {name: 🇯🇵 日本-2.72MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: 167.88.61.50, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇸🇬 新加坡-315.9KB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇭🇰 香港-1.60MB/s(Youtube:不良林), server: tj-hk01.yiyodns.xyz, port: 443, type: trojan, password: 7dafe71e-2be6-302f-bdfc-e6319a3299bc, sni: tj-hk01.yiyodns.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.21MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-3.33MB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇨🇳 中国-6.85MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.46MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.91MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32912, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-177.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-315.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-177.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-315.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-177.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-315.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.60MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-177.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-315.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-177.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-315.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-177.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-315.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-177.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.32MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.50MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.0KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-315.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
