--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.72MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇯🇵 日本-2.40MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: 167.88.61.50, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-3.21MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-3.33MB/s(Youtube:不良林), server: 85.208.108.94, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-6.85MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.46MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-2.91MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32912, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: 167.88.61.50, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.29MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-561.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.37MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇯🇵 日本-2.93MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-2.17MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.40MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.33MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.85MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.73MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
+      - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
