--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.46MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-3.47MB/s(Youtube:不良林), server: 167.88.61.50, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-2.29MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
   - {name: 🇫🇷 法国-561.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇫🇷 法国-1.37MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇯🇵 日本-2.67MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.91MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32912, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-1.60MB/s(Youtube:不良林), server: tj-hk01.yiyodns.xyz, port: 443, type: trojan, password: 7dafe71e-2be6-302f-bdfc-e6319a3299bc, sni: tj-hk01.yiyodns.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.35MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32911, type: trojan, password: 409906c5-740a-4068-84e1-45be10d2b067, sni: gb.v2yyds.com, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.93MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-2.17MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: v04.ssrsub.com, port: 153, type: vmess, uuid: fb61d738-ef95-446d-9004-c93a1a975cad, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v04.ssrsub.com}}
+  - {name: 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇺🇸 美国-486.3KB/s(Youtube:不良林), server: 51.81.223.19, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.46MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.47MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.29MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇫🇷 法国-561.1KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.37MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.67MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.91MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.60MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.35MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-468.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-486.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
